Update: main app + Trello/Xero integration + client database